# azu

./: .clang-format  .gitignore  .gitmodules  build_shaders.sh  meson.build
examples/: bunnymark.cpp
shaders/: quad.frag  quad.vert  triangle.frag  triangle.vert
src/: azu.cpp  azu.h  consts.h  main.cpp  meson.build  util.h  vk_context.cpp  vk_context.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h
src/shaders/: triangle.frag  triangle.vert
src/util/: buffer.cpp  buffer.h  color.h  geometry.h  quad_data.h  texture.h  util.h  vk_init.cpp  vk_init.h
src/vk_context/: destroy.cpp  init.cpp  quad_data.h  shader.cpp  util.cpp  vk_context.h
src/vk_init/: vk_init.cpp  vk_init.h
src/vk_pipeline/: vk_pipeline.cpp  vk_pipeline.h
